[Java] Add new options for java command in terminal
IDEA-359564

GitOrigin-RevId: 378df84aca4ba2f6ab42562c27cca4a68400a3d2